# AdventOfCode-OCaml

./: .gitignore  aoc.opam  dune-project  flake.nix
2023/day01/: day01.ml  dune
2023/day02/: day02.ml  dune
2023/day03/: day03.ml  dune
2023/day04/: day04.ml  dune
2023/day05/: day05.ml  dune
2023/day06/: day06.ml  dune
2024/day01/: day01.ml  dune
2024/day02/: day02.ml  dune
2024/day03/: day03.ml  dune
2024/day04/: day04.ml  dune
2024/day05/: day05.ml  dune
2024/day06/: day06.ml  dune
2024/day07/: day07.ml  dune
2024/day08/: day08.ml  dune
util/: dune  util.ml
